--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "Lib/teensy.pretty"]
 	path = Lib/teensy.pretty
 	url = https://github.com/XenGi/teensy.pretty.git
+[submodule "Lib/Connectors_Anderson.pretty"]
+	path = Lib/Connectors_Anderson.pretty
+	url = https://github.com/imuli/Connectors_Anderson.pretty.git
